# py-rust-stemmers

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: armtest.yml  release.yml
src/: lib.rs
